Create personal website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body background="https://images.pond5.com/simple-star-space-background-effect-footage-023768280_prevstill.jpeg">
        
         <h1> Avengers: Infinity War Trailer 2 Breakdown </h1>
-        <iframe width="420" height="145" src="https://www.youtube.com/watch?v=QwievZ1Tx-8"> </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QwievZ1Tx-8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
         <p> </p>
         <img src="https://ewedit.files.wordpress.com/2018/03/screen-shot-2018-03-16-at-6-14-36-am.jpg?w=669">
