Create personal website

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img src="https://thumbs.gfycat.com/IgnorantImpishBarracuda-max-1mb.gif">
         <p>This is, by far, one of the most badass scenes in the entire trailer. Rogers is able to hold his own against Thanos, which surpises both him and the audience. Marvel likes to showcase Rogers's strength: in a similar scene in Civil War, Cap held on to a helicopter with his bare hands.</p>
         <img src="https://thumbs.gfycat.com/LividIllfatedAsianlion-max-1mb.gif">
-        <p> Peter finally meets Doctor Strange. Despite the seriousness of the movie, Infinity War is going to be humurous just like the other MCU films. </p>
+        <p> Peter finally meets Doctor Strange. Despite the seriousness of the movie, Infinity War is going to be humorous just like the other MCU films. </p>
         <img src= "https://media0.giphy.com/media/ZgQezYTczl9slVo4hS/giphy.gif">
         <p> The best scenes in any Spiderman film are when he's swinging through the air.</p>
 </html>
